syntax = "proto3";

package user;

option java_package = "com.example.grpc";
option java_outer_classname = "UserProto";

import "google/protobuf/empty.proto";

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string date_of_birth = 4;
}

message SuccessMessage {
  string message = 1;
}

message GetUserRequest {
  int32 id = 1;
}

message UserList {
  repeated User users = 1;
}
service UserService {
  rpc CreateUser(User) returns (SuccessMessage);
  rpc GetUser(GetUserRequest) returns (User);
  rpc ListUsers(google.protobuf.Empty) returns (UserList);
}

